- fixed bug in tooltip text for non-trivial or gantry configuration

  Thanks to chili023/TRothfelder for reporting/fixing

- bug in spindle speed override: The override value wasn't applied
  when spindle turning in reverse direction

  Thanks Reinhard for reporting

ver 3.1.3.8 (LinuxCNC 2.8.3 release)
- fixed translation of some tooltips and a dialog message
  Thanks to zz912

- fixed detection of file change:
  - A cursor change in the G-code editor was detected as a file change.
  - After saving changes, a warning for unsaved changes still appeared.

- fixed disabled save button after creating a new file and 'save as'

ver 3.1.3.8
- changed the hide command to be able to hide any element of the GUI

ver 3.1.3.7
- bug in embedded tabs, setting box_tool_and_gcode_info"
  as location did hide also the overrides, that was not correct.
  as we do need to hide them i.e. for plasma, I introduced a new
  feature. If you just enter hide as vommand in INI file, the
  corresponding widget will be hidden, without replacing the content.

  Thanks Jasen for reporting

ver 3.1.3.6
- get rid o some "ERROR" strings in translation file
  as the error type is displayed as ICON in self._show_error

  Thanks to hansu for reporting

ver 3.1.3.5
- wrong translation of "Follow System Theme" leaded to a wrong 
  theme when loading the GUI.
  Will correct the translation files with a different commit

  Thanks to hansu for reporting

ver 3.1.3.4
- PAUSE button was active, even if no program was running

  Thanks to hansu for reporting

ver 3.1.3.3
- pause a program would not allow to jog through the gcode preview
  gcode preview will no be enabled if program is paused, only scrolling,
  it is not possible to edit or select a line!

  Thanks to hansu for reporting

ver 3.1.3.2
- change og gmoccapy hal pin gmoccapy.jog.jog-inc-N leaded to an
  aboart() command, so changing that pin i.e. in AUTO mode stops
  Spindle and program execution. That is not the expected behavior.
